# tictac

./: .clang-format  .gitignore  CMakeLists.txt  cmake_install.cmake
src/shared/opentictac/: CMakeLists.txt  cmake_install.cmake
src/shared/opentictac/analysis/: AN_Analysis.cpp  AN_Analysis.hpp  AN_DCAnalysis.cpp  AN_DCAnalysis.hpp  AN_TranAnalysis.cpp  AN_TranAnalysis.hpp  CMakeLists.txt  cmake_install.cmake
src/shared/opentictac/analysis/analyfunctions/: AN_AnalysisFunctionBase.cpp  AN_AnalysisFunctionBase.hpp  AN_DCFunction.cpp  AN_DCFunction.hpp  AN_TranFunction.cpp  AN_TranFunction.hpp  CMakeLists.txt  cmake_install.cmake
src/shared/opentictac/analysis/controllers/: AN_DTController.cpp  AN_DTController.hpp  AN_SimulationControllers.cpp  AN_SimulationControllers.hpp  AN_Tran_TimeStepController.cpp  AN_Tran_TimeStepController.hpp  CMakeLists.txt  cmake_install.cmake
src/shared/opentictac/computer/: CMakeLists.txt  TicTacComputer.cpp  TicTacComputer.hpp  cmake_install.cmake
src/shared/opentictac/linear_solvers/: CMakeLists.txt  LS_LUSolver_STUDENT.hpp  LS_SolverBase.hpp  LS_SolverFactory.cpp  LS_SolverFactory.hpp  cmake_install.cmake
src/shared/opentictac/matrix_la/: CMakeLists.txt  LA_AssemblyMatrixMap.cpp  LA_AssemblyMatrixMap.hpp  LA_CRSMatrix.hpp  LA_MatrixBasis.hpp  LA_MatrixNetlistMap.cpp  LA_MatrixNetlistMap.hpp  cmake_install.cmake
src/shared/opentictac/netlist/: CMakeLists.txt  Netlist.cpp  Netlist.hpp  cmake_install.cmake
src/shared/opentictac/netlist/devices/: CMakeLists.txt  Device.cpp  Device.hpp  cmake_install.cmake
src/shared/opentictac/netlist/devices/linear/: Capacitor.cpp  Capacitor.hpp  Inductor.cpp  Inductor.hpp  Resistor.cpp  Resistor.hpp
src/shared/opentictac/netlist/devices/nonlin/: D_SimpleMOSFET.cpp  D_SimpleMOSFET.hpp  SimpleBJT.cpp  SimpleBJT.hpp  SimpleDiode.cpp  SimpleDiode.hpp
src/shared/opentictac/netlist/devices/sources/: IndependenCurrentSource.cpp  IndependenCurrentSource.hpp  IndependentVoltageSource.cpp  IndependentVoltageSource.hpp
src/shared/opentictac/nonlinear_solvers/: CMakeLists.txt  NS_Function.cpp  NS_Function.hpp  NS_NonlinearSolver.cpp  NS_NonlinearSolver.hpp  cmake_install.cmake
src/shared/opentictac/options/: CMakeLists.txt  IN_SimOptions.cpp  IN_SimOptions.hpp  cmake_install.cmake
src/shared/opentictac/output/: CMakeLists.txt  OUT_GnuplotPlotter.cpp  OUT_GnuplotPlotter.hpp  OUT_MatlabPlotter.cpp  OUT_MatlabPlotter.hpp  OUT_MessageHandle.cpp  OUT_MessageHandle.hpp  OUT_WaveFormPlotter.cpp  OUT_WaveFormPlotter.hpp  cmake_install.cmake
src/shared/opentictac/parser_netlist/: CMakeLists.txt  cmake_install.cmake  readme.txt
src/shared/opentictac/parser_netlist/netlist_control/: CMakeLists.txt  IP_AnaysisCard.cpp  IP_AnaysisCard.hpp  IP_Assertion.cpp  IP_Assertion.hpp  IP_ControlBase.cpp  IP_ControlBase.hpp  IP_GlobalSettings.cpp  IP_GlobalSettings.hpp  IP_Measurement.cpp  IP_Measurement.hpp  IP_Option.cpp  IP_Option.hpp  IP_Output.cpp  IP_Output.hpp  cmake_install.cmake
src/shared/opentictac/parser_netlist/netlist_expansion/: CMakeLists.txt  IP_DeviceMatchinRule.cpp  IP_DeviceMatchinRule.hpp  IP_ExpansionStack.cpp  IP_ExpansionStack.hpp  IP_InstanceableDeviceList.cpp  IP_InstanceableDeviceList.hpp  IP_NetlistExpander.cpp  IP_NetlistExpander.hpp  IP_SimpleDevsList.cpp  IP_SimpleDevsList.hpp  cmake_install.cmake
src/shared/opentictac/parser_netlist/netlist_expression/: CMakeLists.txt  IP_ExprConstEvaluator.cpp  IP_ExprConstEvaluator.hpp  IP_ExpressionParser.cpp  IP_ExpressionParser.hpp  cmake_install.cmake
src/shared/opentictac/parser_netlist/netlist_struct/: CMakeLists.txt  IP_ConditionedNetlist.cpp  IP_ConditionedNetlist.hpp  IP_Element.cpp  IP_Element.hpp  IP_Function.cpp  IP_Function.hpp  IP_Model.cpp  IP_Model.hpp  IP_NetlistStructBase.cpp  IP_NetlistStructBase.hpp  IP_NetlistStructInfo.cpp  IP_NetlistStructInfo.hpp  IP_NetlistStructSequence.cpp  IP_NetlistStructSequence.hpp  IP_NetworkNode.cpp  IP_NetworkNode.hpp  IP_Param.cpp  IP_Param.hpp  IP_SubcirDef.cpp  IP_SubcirDef.hpp  IP_SubcirSettings.cpp  IP_SubcirSettings.hpp  IP_XCall.cpp  IP_XCall.hpp  cmake_install.cmake
src/shared/opentictac/parser_netlist/netlist_struct/xspice/: CMakeLists.txt  IP_D_ADC.cpp  IP_D_ADC.hpp  IP_D_And.cpp  IP_D_And.hpp  IP_D_BaseElement.cpp  IP_D_BaseElement.hpp  IP_D_Buffer.cpp  IP_D_Buffer.hpp  IP_D_DAC.cpp  IP_D_DAC.hpp  IP_D_DFF.cpp  IP_D_DFF.hpp  IP_D_DLatch.cpp  IP_D_DLatch.hpp  IP_D_Inverter.cpp  IP_D_Inverter.hpp  IP_D_JKFF.cpp  IP_D_JKFF.hpp  IP_D_Nand.cpp  IP_D_Nand.hpp  (+15 more)
src/shared/opentictac/parser_netlist/netlist_visitor/: CMakeLists.txt  GraphStringFilter.cpp  GraphStringFilter.hpp  IP_FillExpansionStack.cpp  IP_FillExpansionStack.hpp  IP_NameSearchVisitor.cpp  IP_NameSearchVisitor.hpp  IP_NetlistVisitBase.cpp  IP_NetlistVisitBase.hpp  IP_NetlistVisitorUtils.cpp  IP_NetlistVisitorUtils.hpp  IP_SubcktCopyVisitor.cpp  IP_SubcktCopyVisitor.hpp  IP_SubcktElabor.cpp  IP_SubcktElabor.hpp  IP_VerboseVisitor.cpp  IP_VerboseVisitor.hpp  cmake_install.cmake
src/shared/opentictac/parser_netlist/parser/: CMakeLists.txt  IP_ParserBase.cpp  IP_ParserBase.hpp  cmake_install.cmake
src/shared/opentictac/parser_netlist/parser_expression/: CMakeLists.txt  IP_SpiceExpression_grammar.hpp  cmake_install.cmake
src/shared/opentictac/parser_netlist/scanner/: CMakeLists.txt  IP_DummyModule.hpp  IP_ScannerBase.cpp  IP_ScannerBase.hpp  IP_SimpleScanner.cpp  IP_SimpleScanner.hpp  IP_Token.cpp  IP_Token.hpp  cmake_install.cmake
src/shared/opentictac/parser_netlist/veriloga_structs/: CMakeLists.txt  cmake_install.cmake  readme.txt
src/shared/opentictac/test/: CMakeLists.txt  catch.hpp  test_graph_filter.cpp  test_main.cpp  trompeloeil.hpp
src/shared/opentictac/utils/: CMakeLists.txt  XMLReader.cpp  XMLReader.hpp  catch.hpp  cmake_install.cmake  node_gram.hpp  pwl_line.cpp  pwl_line.hpp  sim_utils.cpp  sim_utils.hpp  titan_offsets.hpp
src/shared/opentictac/utils/test/: CMakeLists.txt  catch.hpp  first_test.cpp  test_pwl_main.cpp
src/shared/opentictac/utils/test_gram/: CMakeLists.txt  main_test.cpp  test_main.cpp
(+158 files in other folders)
